[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "spyderchat"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.7"
validate_email = "^1.3"
arrow = "^0.15.5"
termcolor = "^1.1"
colorama = "^0.4.3"
profanity = "^1.1"
sentence-url = "^0.0.1"
names = "^0.3.0"
random-username = "^1.0"
[tool.poetry.dev-dependencies]
